<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_recyclerview"
    android:orientation="vertical"
    tools:context=".filtre.FiltreActivity"
    android:scrollbars="vertical">


    <android.support.v7.widget.Toolbar android:id="@+id/toolbar_filter"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background_actionbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:textColor="@android:color/background_light">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_arrow_filter"
            android:layout_centerHorizontal="true"
            android:layout_gravity="left"
            android:src="@drawable/ic_action_arrow_left"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title_filter"
            android:textColor="@color/background_recyclerview"
            android:textSize="30dp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:id="@+id/reinit"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:src="@drawable/icon_init"
            android:clickable="true"/>


    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/countresto"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/button_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/distance_name" />

            <com.platine.liveresto.rangeseekbar.RangeSeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rangeseekbardistance"
                app:singleThumb="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/button_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/horaires_name" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_recyclerview" />

            <com.platine.liveresto.rangeseekbar.RangeSeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rangeseekbarschedule"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/button_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/type_name" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_recyclerview" />

            <Button
                android:id="@+id/button_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/budget_name" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_recyclerview" />

            <Button
                android:id="@+id/button_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/payment_name" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_recyclerview" />

            <Button
                android:id="@+id/button_atmosphere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/atmosphere_name" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_atmosphere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_recyclerview" />

            <Button
                android:id="@+id/button_waitingtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/waitingtime_name" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_waitingtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_recyclerview" />

            <Button
                android:id="@+id/button_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/number_name" />

            <com.platine.liveresto.rangeseekbar.RangeSeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rangeseekbarplaces"
                app:singleThumb="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />


            <Button
                android:id="@+id/button_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:textColor="@color/background_actionbar"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/other_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iconTerrace"
                    android:src="@drawable/icon_terrace"
                    android:clickable="true"/>

                <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Terrasse"
                android:id="@+id/switchTerrace"
                android:layout_marginLeft="8dp"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:theme="@style/MySwitch" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iconAirConditionner"
                    android:src="@drawable/icon_airconditionner"
                    android:clickable="true"/>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Climatisation"
                    android:id="@+id/switchAirConditionner"
                    android:layout_marginLeft="8dp"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:theme="@style/MySwitch"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>